WindGroup Dev/src/objects/DOA__c.object
<CustomObject>
    <fields>
        <fullName>Approver_Email__c</fullName>
        <formula>Approver__r.Email</formula>
        <label>Approver Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver_Title__c</fullName>
        <formula>Approver__r.Title</formula>
        <label>Approver Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <label>Approver</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Department__c</field>
                <operation>equals</operation>
                <valueField>Contact.Department</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Staff</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DOA</relationshipLabel>
        <relationshipName>DOA</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Condition__c</fullName>
        <label>Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Property</label>
        <referenceTo>Property__c</referenceTo>
        <relationshipLabel>DOA</relationshipLabel>
        <relationshipName>DOA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>DOA</relationshipLabel>
        <relationshipName>DOA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DOA</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Approver__c</columns>
        <columns>Approver_Title__c</columns>
        <columns>Department__c</columns>
        <columns>Level__c</columns>
        <columns>Condition__c</columns>
        <columns>Property__c</columns>
        <columns>Purchase_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Property__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOA-{YYYYMM}-{000000}</displayFormat>
        <label>DOA Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DOA</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>